package at.jku.se.sudokumaster;

public class AnchorPoint{
    private int col;
    private int row;

    public AnchorPoint(int col, int row) {
        this.col = col;
        this.row = row;
    }

    public int getCol() {
        return col;
    }

    public void setCol(int col) {
        this.col = col;
    }

    public int getRow() {
        return row;
    }

    public void setRow(int row) {
        this.row = row;
    }
}
