@startuml

title __SOFTWARE's Class Diagram__\n

  namespace at.jku.se.controller {
    namespace HighScore {
      class at.jku.se.controller.HighScore.CalculateScore {
      }
    }
  }
  

  namespace at.jku.se.controller {
    namespace HighScore {
      class at.jku.se.controller.HighScore.CreateHighScoreObject {
      }
    }
  }
  

  namespace at.jku.se.controller {
    class at.jku.se.controller.HighScoreBoardController {
    }
  }
  

  namespace at.jku.se.controller {
    class at.jku.se.controller.HighScoreBoardControllerT {
    }
  }
  

  namespace at.jku.se.controller {
    class at.jku.se.controller.LoadGameController {
    }
  }
  

  namespace at.jku.se.controller {
    class at.jku.se.controller.MainMenueController {
    }
  }
  

  namespace at.jku.se.controller {
    class at.jku.se.controller.NewGameController {
    }
  }
  

  namespace at.jku.se.controller {
    class at.jku.se.controller.PlayfieldController {
    }
  }
  

  namespace at.jku.se.controller {
    class at.jku.se.controller.SudokuHelper {
    }
  }
  

  namespace at.jku.se.sudokumaster {
    class at.jku.se.sudokumaster.AnchorPoint {
    }
  }
  

  namespace at.jku.se.sudokumaster {
    class at.jku.se.sudokumaster.CalculateScoreTest {
    }
  }
  

  namespace at.jku.se.sudokumaster {
    class at.jku.se.sudokumaster.Cell {
    }
  }
  

  namespace at.jku.se.sudokumaster {
    class at.jku.se.sudokumaster.SimpleBoard {
    }
  }
  

  namespace at.jku.se.sudokumaster {
    class at.jku.se.sudokumaster.SimpleSolver {
    }
  }
  

  namespace at.jku.se.sudokumaster {
    class at.jku.se.sudokumaster.SimpleSolverTest {
    }
  }
  

  namespace at.jku.se.sudokumaster {
    class at.jku.se.sudokumaster.SudokuMaster {
    }
  }
  

  namespace at.jku.se.utility {
    class at.jku.se.utility.HighScoreObject {
    }
  }
  

  namespace at.jku.se.utility {
    class at.jku.se.utility.NewScreen {
    }
  }
  

  namespace at.jku.se.utility {
    class at.jku.se.utility.NewScreenDropDown {
    }
  }
  

  at.jku.se.controller.HighScoreBoardController .up.|> javafx.fxml.Initializable
  at.jku.se.controller.HighScoreBoardControllerT .up.|> javafx.fxml.Initializable
  at.jku.se.controller.LoadGameController .up.|> javafx.fxml.Initializable
  at.jku.se.controller.MainMenueController .up.|> javafx.fxml.Initializable
  at.jku.se.controller.NewGameController .up.|> javafx.fxml.Initializable
  at.jku.se.controller.PlayfieldController o-- at.jku.se.controller.SudokuHelper : h
  at.jku.se.sudokumaster.SudokuMaster -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
